sistemato configure e makefile
git-svn-id: https://svn.smr.arpa.emr.it/radar/trunk/radarcoordlib@1472 5e904517-b230-484e-af0d-ad602924471e

--- a/configure.ac
+++ b/configure.ac
@@ -19,5 +19,6 @@ AC_CHECK_LIB([Geographic], [main],
 
 
 AC_CONFIG_FILES([Makefile
-                 doc/Makefile])
+                 doc/Makefile
+		 doc/Doxyfile])
 AC_OUTPUT
