Corretti i .pc di genericradar e radarcoord
git-svn-id: https://svn.smr.arpa.emr.it/radar/trunk/radarcoordlib@1496 5e904517-b230-484e-af0d-ad602924471e

--- a/radarcoordlib.pc.in
+++ b/radarcoordlib.pc.in
@@ -7,4 +7,4 @@ Name: @PACKAGE_NAME@
 Description: radar coord library
 Version: @VERSION@
 Cflags: -I${includedir}
-Libs: -L${libdir} @LIBS@
+Libs: -L${libdir} @LIBS@ -lradarcoord
