aggiornato a nuova release GeograficLib, convertiti Esempi in testù
git-svn-id: https://svn.smr.arpa.emr.it/radar/trunk/radarcoordlib@2294 5e904517-b230-484e-af0d-ad602924471e

--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,7 @@ AC_CHECK_LIB([Geographic], [main],
 
 AC_CONFIG_FILES([Makefile
 		 radarcoordlib/Makefile
+		 test/Makefile
                  doc/Makefile
 		 doc/Doxyfile
 		 radarcoordlib.pc])
