updated travis builds

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
 *~
 \#*\#
+*.o
+*.lo
+*.la
+.deps
+.libs
+Makefile
+Makefile.in
+/aclocal.m4
+/autom4te.cache
+/compile
+/config.guess
+/config.h
+/config.h.in
+/config.log
+/config.status
+/config.sub
+/configure
+/depcomp
+/install-sh
+/libtool
+/ltmain.sh
+/missing
+/stamp-h1
+/test-driver
 /radarcoordlib.pc
 /radarcoordlib-*.tar.gz
 /doc/log_doxygen
