--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,12 @@ script:
 env:
     - DOCKER_IMAGE=centos:7
     - DOCKER_IMAGE=fedora:28
-    - DOCKER_IMAGE=fedora:27
-    - DOCKER_IMAGE=fedora:26
+    - DOCKER_IMAGE=fedora:29
+    - DOCKER_IMAGE=fedora:rawhide
+
+matrix:
+    allow_failures:
+        - env: DOCKER_IMAGE=fedora:rawhide
 
 before_deploy:
     - openssl aes-256-cbc -K $encrypted_7a5b879a31f7_key -iv $encrypted_7a5b879a31f7_iv -in .copr.enc -out .copr -d
