--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,7 +4,8 @@ check_PROGRAMS = \
 		 test_RadarBeamCoord \
 		 test_RadarGeoCoord \
 		 test_RadarPoint \
-		 test_RadarSegment
+		 test_RadarSegment \
+		 test_PointVeryClose
 
 test_RadarBeamCoord_SOURCES = test_RadarBeamCoord.cpp
 test_RadarBeamCoord_LDADD = $(top_srcdir)/radarcoordlib/libradarcoord.la
@@ -17,5 +18,8 @@ test_RadarPoint_LDADD = $(top_srcdir)/radarcoordlib/libradarcoord.la
 
 test_RadarSegment_SOURCES = test_RadarSegment.cpp
 test_RadarSegment_LDADD = $(top_srcdir)/radarcoordlib/libradarcoord.la
+
+test_PointVeryClose_SOURCES = test_PointVeryClose.cpp
+test_PointVeryClose_LDADD = $(top_srcdir)/radarcoordlib/libradarcoord.la
 
 TESTS = $(check_PROGRAMS)
